@@ -1,13 +1,12 @@
 package org.jboss.resteasy.test.multipart;
 
-import org.apache.commons.io.IOUtils;
 import org.jboss.resteasy.core.providerfactory.ResteasyProviderFactoryImpl;
 import org.jboss.resteasy.plugins.providers.multipart.InputPart;
 import org.jboss.resteasy.plugins.providers.multipart.MultipartInputImpl;
 import org.junit.Assert;
 import org.junit.Test;
 
-import javax.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.MediaType;
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 import java.util.Base64;
@@ -36,7 +35,7 @@ public class Base64EncoderMultiPartTest {
 
         for (InputPart part : multipart.getParts()) {
             InputStream inputStream = ((MultipartInputImpl.PartImpl) part).getBody();
-            byte[] bytes = IOUtils.toByteArray(inputStream);
+            byte[] bytes = inputStream.readAllBytes();
             String base64bytes = Base64.getEncoder().encodeToString(bytes);
             Assert.assertEquals(body, base64bytes);
         }
